@@ -24,13 +24,6 @@ module Administrate
         template "dashboard.rb.erb", "app/dashboards/#{file_name}_dashboard.rb"
       end
 
-      def create_resource_controller
-        template(
-          "controller.rb.erb",
-          "app/controllers/admin/#{file_name.pluralize}_controller.rb"
-        )
-      end
-
       private
 
       def attributes
