@@ -1,12 +1,0 @@
-class Admin::<%= class_name.pluralize %>Controller < Admin::ApplicationController
-  # To customize the behavior of this controller,
-  # simply overwrite any of the RESTful actions. For example:
-  #
-  # def index
-  #   super
-  #   @resources = <%= class_name %>.all.paginate(10, params[:page])
-  # end
-
-  # See https://administrate-docs.herokuapp.com/customizing_controller_actions
-  # for more information
-end
